--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "npm": "^9.6.7",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
