--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
+    "openai": "^3.3.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   }
