--- a/backend/package.json
+++ b/backend/package.json
@@ -6,24 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js && node producer.js && node worker.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
+    "bull": "^4.10.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "googleapis": "^120.0.0",
     "jsonwebtoken": "^9.0.0",
+    "memory-cache": "^0.2.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
     "openai": "^3.3.0",
     "passport": "^0.5.3",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "rate-limiter-flexible": "^2.4.1",
+    "redis": "^4.6.7"
   }
 }
