--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.1.6",
     "amqplib": "^0.10.3",
     "axios": "^1.4.0",
+    "base64-js": "^1.5.1",
     "bull": "^4.10.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
