--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@pinecone-database/pinecone": "^0.1.6",
+    "@qdrant/js-client-rest": "^1.3.0",
     "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "base64-js": "^1.5.1",
@@ -31,6 +32,7 @@
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "rate-limiter-flexible": "^2.4.1",
-    "redis": "^4.6.7"
+    "redis": "^4.6.7",
+    "uuid": "^9.0.0"
   }
 }
