added loading screen while initial 250 emails get loaded to mongodb and qdrant db. implemented logic for rest of onboarding. logic is temprarily sitting on GET /search api route for the sake of testing. move this logic to the redis queue in queue.js. add userId to the queue during the GET /onboarding api call

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "base64-js": "^1.5.1",
+    "bottleneck": "^2.19.5",
     "bull": "^4.10.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
