--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@pinecone-database/pinecone": "^0.1.6",
     "@qdrant/js-client-rest": "^1.3.0",
     "amqplib": "^0.10.3",
+    "async-mutex": "^0.4.0",
     "axios": "^1.4.0",
     "base64-js": "^1.5.1",
     "bottleneck": "^2.19.5",
