--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
