--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 # Use an official Node.js runtime as a parent image
-FROM node:20.4.0
+FROM node:20-alpine3.18
 
 # Set the working directory in the container
-WORKDIR /app/backend
+WORKDIR /app
 
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
