--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gmail-ai-smartfilter",
   "version": "0.1.0",
+  "homepage": "http://gmailaifilter.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -8,8 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
-    "jsonwebtoken": "^9.0.0",
-    "jwt-decode": "^3.1.2",
     "npm": "^9.6.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
