Transitioned domain from gmailaifilter.com --> emailaifilter.com to avoid legal branding issues. Removed all instances of 'Gmail AI Filter' from frontend. Updated GCP project name to match app name on oauth consent form 'Email AI Filter'. Submitted application for google re-verification since I made changes

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Gmail AI Filter",
+  "short_name": "Email AI Filter",
   "name": "Create React App Sample",
   "icons": [
     {
