tested consent page, cleaned up dev logs, pushed to prod

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "deploy": "npm run build && scp -r ./build/* root@167.71.90.155:/usr/share/nginx/html"
   },
   "eslintConfig": {
     "extends": [
