--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js node --inspect=localhost:8000 --trace-warnings"
+    "dev": "FRONTEND_URL=http://localhost:3000 BACKEND_URL=http://localhost:8000 API_ROOT=/ nodemon server.js node --inspect=localhost:8000 --trace-warnings"
   },
   "keywords": [],
   "author": "",
