--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,12 +29,11 @@
   "scripts": {
     "start": "react-scripts start",
     "start:dev": "REACT_APP_SERVER_URL=http://localhost:8000 REACT_APP_CLIENT_URL=http://localhost:3000 react-scripts start",
-    "pushProd": "react-scripts build && scp -r ./build/* root@167.71.90.155:/usr/share/nginx/html",
     "build": "react-scripts build",
+    "deploy": "react-scripts build && scp -r ./build/* root@167.71.90.155:/usr/share/nginx/html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server.js",
-    "deploy": "npm run build && scp -r ./build/* root@167.71.90.155:/usr/share/nginx/html"
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
